force-app/main/default/objects/bt_stripe__Code_Eligibility__c/bt_stripe__Code_Eligibility__c.object-meta.xml
<CustomObject>
    <description>Code Eligibility is used to specify what Account has access to a Code for access or a discount. It can also be configured in our Events package to specify a Code for a specific Event or Event Item.</description>
    <label>Code Eligibility</label>
    <nameField>
        <displayFormat>CE-{000000}</displayFormat>
        <label>Code Eligibility Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Code Eligibilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>