force-app/main/default/objects/bt_stripe__Code_Eligibility__c/fields/bt_stripe__Account__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is deprecated! Moved this field to the Code object.</description>
    <inlineHelpText>This field is deprecated!</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Code Eligibilities</relationshipLabel>
    <relationshipName>Code_Eligibilities</relationshipName>
    <type>Lookup</type>
</CustomField>