force-app/main/default/objects/bt_stripe__Code_Eligibility__c/fields/bt_stripe__Code__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Code that is Eligible</inlineHelpText>
    <label>Code</label>
    <referenceTo>bt_stripe__Code__c</referenceTo>
    <relationshipLabel>Code Eligibilities</relationshipLabel>
    <relationshipName>Code_Eligibilities</relationshipName>
    <type>Lookup</type>
</CustomField>