force-app/main/default/objects/bt_stripe__Code_Eligibility__c/fields/conference360__Event__c.field-meta.xml
<CustomField>
    <fullName>conference360__Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Event or Event Item can be set on a Code Eligibility record - not both.</inlineHelpText>
    <label>Event</label>
    <referenceTo>conference360__Event__c</referenceTo>
    <relationshipLabel>Code Eligibilities</relationshipLabel>
    <relationshipName>Code_Eligibilities</relationshipName>
    <type>Lookup</type>
</CustomField>