force-app/main/default/objects/bt_stripe__Code_Eligibility__c/validationRules/conference360__Allow_Event_or_Event_Item.validationRule-meta.xml
<ValidationRule>
    <fullName>conference360__Allow_Event_or_Event_Item</fullName>
    <active>true</active>
    <description>but not both - a code eligibility record can only be defined for an Event or Event Item - not both</description>
    <errorConditionFormula>AND(
conference360__Event__c &lt;&gt; null,
conference360__Event_Item__c &lt;&gt; null
)</errorConditionFormula>
    <errorMessage>You can only create a Code Eligibility for an Event or Event Item - not both.</errorMessage>
</ValidationRule>